@@ -9,6 +9,12 @@ filebeat:
     index: logs-generic-default
     processors:
       - add_fields:
+          target: "dataset"
+          fields:
+            type: logs
+            name: generic
+            namespace: default
+      - add_fields:
           target: "stream"
           fields:
             type: logs
