@@ -10,6 +10,12 @@ filebeat:
       var: value
     processors:
       - add_fields:
+          target: "dataset"
+          fields:
+            type: logs
+            name: generic
+            namespace: default
+      - add_fields:
           target: "stream"
           fields:
             type: logs
